--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <!-- End Header -->
   <!-- Start Landing -->
   <div class="landing">
+    <!-- removed landing page -->
   </div>
 <!-- End Landing -->
 </body>
