done with Landing

--- a/index.html
+++ b/index.html
@@ -39,6 +39,19 @@
   <!-- End Header -->
   <!-- Start Landing -->
   <div class="landing">
+    <div class="text">
+      <div class="content">
+        <h2>Plant with Sara</h2>
+        <p>From stylish succulents to beautiful peace lilies, brighten up your home with our range of indoor plants. Looking to update your outdoor space? Discover our wide range of planters, including pansies and hyacinths and trees like bay and lavende</p>
+      </div>
+    </div>
+    <i class="fas fa-angle-left change-position fa-2x"></i>
+    <i class="fas fa-angle-right change-position fa-2x"></i>
+    <ul class="bullets">
+      <li></li>
+      <li class="active"></li>
+      <li></li>
+    </ul>
   </div>
 <!-- End Landing -->
 </body>
