finished services section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,46 @@
       <li></li>
     </ul>
   </div>
-<!-- End Landing -->
+  <!-- End Landing -->
+  <!-- Start Services -->
+  <div class="services">
+    <div class="container">
+      <div class="main-heading">
+        <h2>Services</h2>
+        <p>Our Services We Provide To Our Amazing Customers</p>
+      </div>
+      <div class="serv-container">
+        <div class="serv">
+          <i class="fas fa-seedling fa-2x"></i>
+          <div class="text">
+            <h3>Plant Therapy</h3>
+            <p>Horticultural therapy is a technique that relies on plants and gardening to help people overcome health issues such as high blood pressure.</p>
+          </div>
+        </div>
+        <div class="serv">
+          <i class="fas fa-store fa-2x"></i>
+          <div class="text">
+            <h3>Plants Store</h3>
+            <p>We help you cultivate a life well-lived through indoor plants and elements... Visit our stores.</p>
+          </div>
+        </div>
+        <div class="serv">
+          <i class="fas fa-leaf fa-2x"></i>
+          <div class="text">
+            <h3>Planting Tutorials</h3>
+            <p>If you are simply growing two or three indoor plants, this process is easy. But if you plan to grow a full garden, you might need help.</p>
+          </div>
+        </div>
+        <div class="serv">
+          <i class="fas fa-blog fa-2x"></i>
+          <div class="text">
+            <h3>Blogging</h3>
+            <p>A blog full of houseplants care tips for your urban jungle. Learn how to keep indoor plants alive, based on science and personal experience!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Services -->
 </body>
 </html>
