--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
     </div>
   </div>
   <!-- End Services -->
+  <!-- Start Design -->
+  <div class="design">
+    <div class="text">
+      <div class="content">
+        <h3>Our Product Comes With: </h3>
+        <ul>
+          <li>Pots</li>
+          <li>Cool Bag</li>
+          <li>Grow Light</li>
+          <li>Nice Vase</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- End Design -->
 </body>
 </html>
 <!-- updated v1.0 -->
