--- a/index.html
+++ b/index.html
@@ -109,6 +109,84 @@
     </div>
   </div>
   <!-- End Design -->
+  <!-- Start Portfolio -->
+  <div class="portfolio">
+    <div class="container">
+      <div class="main-heading">
+        <h2>Portfolio</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, aliquam! Et quis neque aperiam numquam voluptatem libero odio, voluptatibus voluptatum ratione corporis quas necessitatibus cupiditate. Laboriosam blanditiis magni sed a.</p>
+      </div>
+      <ul class="shuffle">
+        <li><a href="" class="active">All</a></li>
+        <li><a href="">App</a></li>
+        <li><a href="">Photography</a></li>
+        <li><a href="">Web</a></li>
+        <li><a href="">Print</a></li>
+      </ul>
+    </div>
+    <div class="imgs">
+      <div class="box">
+        <img src="images/1.jpg" alt="">
+        <div class="caption">
+          <h4>Awesome Image</h4>
+          <p>Photography</p>
+        </div>
+      </div>
+      <div class="box">
+        <img src="images/2.jpg" alt="">
+        <div class="caption">
+          <h4>Awesome Image</h4>
+          <p>Photography</p>
+        </div>
+      </div>
+      <div class="box">
+        <img src="images/3.jpg" alt="">
+        <div class="caption">
+          <h4>Awesome Image</h4>
+          <p>Photography</p>
+        </div>
+      </div>
+      <div class="box">
+        <img src="images/4.jpg" alt="">
+        <div class="caption">
+          <h4>Awesome Image</h4>
+          <p>Photography</p>
+        </div>
+      </div>
+      <div class="box">
+        <img src="images/5.jpg" alt="">
+        <div class="caption">
+          <h4>Awesome Image</h4>
+          <p>Photography</p>
+        </div>
+      </div>
+      <div class="box">
+        <img src="images/6.jpg" alt="">
+        <div class="caption">
+          <h4>Awesome Image</h4>
+          <p>Photography</p>
+        </div>
+      </div>
+      <div class="box">
+        <img src="images/7.jpg" alt="">
+        <div class="caption">
+          <h4>Awesome Image</h4>
+          <p>Photography</p>
+        </div>
+      </div>
+      <div class="box">
+        <img src="images/8.jpg" alt="">
+        <div class="caption">
+          <h4>Awesome Image</h4>
+          <p>Photography</p>
+        </div>
+      </div>
+      <div class="more">
+        <a href="">More</a>
+      </div>
+    </div>
+  </div>
+  <!-- End Portfolio -->
 </body>
 </html>
 <!-- updated v1.0 -->
