--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
   <!-- End Landing -->
   <!-- Start Services -->
-  <div class="services">
+  <div class="services" id="services">
     <div class="container">
       <div class="main-heading">
         <h2>Services</h2>
@@ -110,7 +110,7 @@
   </div>
   <!-- End Design -->
   <!-- Start Portfolio -->
-  <div class="portfolio">
+  <div class="portfolio" id="portfolio">
     <div class="container">
       <div class="main-heading">
         <h2>Portfolio</h2>
